# score4

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: cpp-self-play.md
src/score4/: __init__.py  _self_play_cpp.cpp  cuda.py  game.py  mcts.py  model.py  play.py  self_play.py  train.py  web_app.py
tests/: test_game.py  test_mcts.py  test_play.py  test_self_play.py  test_train.py  test_web_app.py
web/: app.js  index.html  styles.css
